--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_NODE=localhost
 REACT_APP_PORT=3000
+REACT_APP_SERVER=8080
 
 PUBLIC_URL = /public
 
@@ -7,5 +8,5 @@ REACT_APP_DOMAIN=DiagnosticImaging
 
 REACT_APP_MANUFACTURER=Illuminati
 
-REACT_APP_CLIENT_DIR=c:\workspace\res
+REACT_APP_CLIENT_DIR=c:/workspace/res
 
