--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+
 REACT_APP_NODE=localhost
 REACT_APP_PORT=3000
+REACT_APP_SERVER=8080
 
 PUBLIC_URL = /public
 
@@ -7,3 +9,4 @@ REACT_APP_DOMAIN=DiagnosticImaging
 
 REACT_APP_MANUFACTURER=Illuminati
 
+GCP_FS_KEY=AIzaSyARoTcdyJZwl8PwhSxxS4qjhj7DYpYrL1A
