test fireStore STORE

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 REACT_APP_NODE=localhost
-REACT_APP_PORT=3000
+REACT_APP_UI=3000
 REACT_APP_SERVER=8080
 
 PUBLIC_URL = /public
@@ -8,5 +8,7 @@ PUBLIC_URL = /public
 REACT_APP_DOMAIN=DiagnosticImaging
 
 REACT_APP_MANUFACTURER=Illuminati
+
+REACT_APP_CLIENT_DIR=c:/workspace/res
 
 GCP_FS_KEY=AIzaSyARoTcdyJZwl8PwhSxxS4qjhj7DYpYrL1A
