--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
+    "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
+    "firebase-app": "^0.0.1",
     "fs": "^0.0.1-security",
     "next": "^14.1.2",
     "nvm": "^0.0.4",
