--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "firebase-app": "^0.0.1",
